[package]
name = "distributed-rate-limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dashmap = "6.1.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = { version = "1.15.1", features = ["serde"] }
tokio = { version = "1.50.0", features = ["full"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
