[package]
name = "distributed-rate-limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
dashmap = "6.1.0"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
prost = "0.14.3"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = { version = "1.15.1", features = ["serde"] }
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tower = { version = "0.5.3", features = ["util"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
